fix: workaround to IE11 responsive image issue when inside the ratio object; partially disabling background component animation of video layer to simplify for release; updating band animation to try to reduce jank of open and close animation. updating iphone device viewer responsive styles

--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
@@ -2,6 +2,7 @@
    #BOLT RATIO OBJECT
    ========================================================================== */
 
+.o-bolt-ratio,
 bolt-ratio {
   display: inline-block;
   position: relative;
