--- a/src/_patterns/02-components/bolt-background/src/background.scss
+++ b/src/_patterns/02-components/bolt-background/src/background.scss
@@ -105,14 +105,14 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
       background-color: transparent;
     }
 
-    .is-collapsed & {
-      transform: scale(0.95) rotateX(20deg) translateY(20%);
-    }
+    // .is-collapsed & {
+    //   transform: scale(0.95) rotateX(20deg) translateY(20%);
+    // }
 
-    .is-expanded & {
-      transform: scale(1) rotateX(0deg) translateY(0%);
-      transition: transform 0.3s cubic-bezier(0.645, 0, 0.355, 1);
-    }
+    // .is-expanded & {
+    //   transform: scale(1) rotateX(0deg) translateY(0%);
+    //   transition: transform 0.3s cubic-bezier(0.645, 0, 0.355, 1);
+    // }
   }
 }
 
