--- a/src/_patterns/02-components/bolt-device-viewer/src/device-viewer.twig
+++ b/src/_patterns/02-components/bolt-device-viewer/src/device-viewer.twig
@@ -43,7 +43,7 @@
   <div class="c-bolt-device-viewer__inner {{ baseClass ~ "__inner"}}">
     <div class="{{ baseClass ~ "__top-bar"}}"></div>
     <div class="{{ baseClass ~ "__bottom-bar"}}"></div>
-
+    <div class="{{ baseClass ~ "__sensor"}}"></div>
     <div class="{{ baseClass ~ "__sleep"}}"></div>
     <div class="{{ baseClass ~ "__volume"}}"></div>
     <div class="c-bolt-device-viewer__camera {{ baseClass ~ "__camera"}}"></div>
