--- a/src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
+++ b/src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
@@ -52,7 +52,7 @@
       ]
     }
   } only %}
-  
+
   {% endembed %}
 
 
@@ -203,7 +203,7 @@
           size: "xxlarge",
           tag: "h2"
         } only %}
-       
+
         {% include "@bolt/text.twig" with {
           text: "Blow away your customer’s expectations - engage each individual one-to-one, letting the AI constantly adapt to their needs.",
           size: "medium"
@@ -270,7 +270,7 @@
           size: "xxlarge",
           tag: "span"
         } only %}
-       
+
         {% include "@bolt/text.twig" with {
           text: "Blow away your customer’s expectations - engage each individual one-to-one, letting the AI constantly adapt to their needs.",
           size: "medium"
@@ -313,7 +313,7 @@
           size: "xxlarge",
           tag: "span"
         } only %}
-       
+
         {% include "@bolt/text.twig" with {
           text: "Blow away your customer’s expectations - engage each individual one-to-one, letting the AI constantly adapt to their needs.",
           size: "medium"
@@ -337,6 +337,40 @@
         {% include "@bolt/device-viewer.twig" with {
           device: "iphone8",
           orientation: "portrait",
+          color: "black",
+          image: {
+            src: "/images/sample/product-device-screenshot--phone.jpg"
+          }
+        } only %}
+      {% endcell %}
+
+       {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
+        {% include "@bolt/device-viewer.twig" with {
+          device: "iphone8",
+          orientation: "portrait",
+          color: "gold",
+          image: {
+            src: "/images/sample/product-device-screenshot--phone.jpg"
+          }
+        } only %}
+      {% endcell %}
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
+        {% include "@bolt/device-viewer.twig" with {
+          device: "iphone8",
+          orientation: "landscape",
+          color: "gold",
+          image: {
+            src: "/images/sample/product-device-screenshot--phone.jpg"
+          }
+        } only %}
+      {% endcell %}
+
+
+       {% cell "u-bolt-width-1/1" %}
+        {% include "@bolt/device-viewer.twig" with {
+          device: "iphone8",
+          orientation: "landscape",
           color: "black",
           image: {
             src: "/images/sample/product-device-screenshot--phone.jpg"
@@ -368,7 +402,7 @@
           size: "xxlarge",
           tag: "span"
         } only %}
-       
+
         {% include "@bolt/text.twig" with {
           text: "Blow away your customer’s expectations - engage each individual one-to-one, letting the AI constantly adapt to their needs.",
           size: "medium"
@@ -495,7 +529,7 @@
   ]
 } %}
   {% block band_content %}
-    
+
 
 
    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--matrix u-bolt-margin-bottom" %}
@@ -557,7 +591,7 @@
   }
 } only %}
   {% block band_content %}
-    
+
     {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--center" %}
       {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small u-bolt-text-align-center" %}
 
@@ -592,7 +626,7 @@
           style: "secondary"
         } only %}
 
-        
+
       {% endcell %}
     {% endgrid %}
   {% endblock %}
