--- a/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer--macbook.scss
+++ b/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer--macbook.scss
@@ -7,7 +7,7 @@ $bolt-macbook-shadow: 0 1px 2px 1px rgba(6,10,36,0.10),
 
 .c-bolt-macbook-viewer {
   width: 100%;
-  max-width: $bolt-macbook-viewer-width;
+  max-width: $bolt-macbook-viewer-width * .6;
   background-color: #bebebe;
   border-top-left-radius: (34px / $bolt-macbook-viewer-width * 100%) (34px / $bolt-macbook-viewer-height * 100%);
   border-top-right-radius: (34px / $bolt-macbook-viewer-width * 100%) (34px / $bolt-macbook-viewer-height * 100%);
