--- a/src/_patterns/02-components/bolt-background/src/background.scss
+++ b/src/_patterns/02-components/bolt-background/src/background.scss
@@ -77,21 +77,25 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
 .c-bolt-background__video {
   z-index: 10;
   transition: all 0.4s ease;
+  pointer-events: none;
 
   .is-ready & {
     background-color: rgba(bolt-color(black), 0.6);
     perspective: 500px;
     perspective-origin: 50% 150%;
+    pointer-events: none;
   }
 
   .is-collapsed & {
     opacity: 0;
     pointer-events: none;
+    visibility: hidden;
   }
 
   .is-expanded & {
     opacity: 1;
     pointer-events: auto;
+    visibility: visible;
   }
 
   .video-js {
