--- a/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer--macbook.scss
+++ b/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer--macbook.scss
@@ -1,9 +1,11 @@
 $bolt-macbook-viewer-height: 720px;
 $bolt-macbook-viewer-width: 960px + (44px * 2);
 
-$bolt-macbook-shadow: 0 1px 2px 1px rgba(6,10,36,0.10),
-  0 0.25rem 0.5rem 1px rgba(6,10,36,0.15),
-  0 1rem 2rem 0 rgba(6,10,36,0.25);
+// $bolt-macbook-shadow: 0 1px 2px 1px rgba(6,10,36,0.10),
+//   0 0.25rem 0.5rem 1px rgba(6,10,36,0.15),
+//   0 1rem 2rem 0 rgba(6,10,36,0.25);
+
+$bolt-macbook-shadow: none;
 
 .c-bolt-macbook-viewer {
   width: 100%;
