--- a/src/_patterns/02-components/bolt-band/src/band.twig
+++ b/src/_patterns/02-components/bolt-band/src/band.twig
@@ -37,24 +37,22 @@
 <bolt-{{ componentName }}
   size="{{ size }}"
   theme="{{ theme }}"
-  bolt-component>
-  <{{ tag }} {{ attributes.addClass(classes) }}>
-    {% set renderedBandContent %}
-      {% block band_background %}
-        {% if background %}
-          {% include "@bolt/background.twig" with background only %}
-        {% endif %}
-      {% endblock band_background %}
-      <{{ contentTag }} class="{{ "#{baseClass}__content" }}">
-        {% block band_content %}
-          {{ content }}
-        {% endblock band_content %}
-      </{{ contentTag }}>
-    {% endset %}
+  bolt-component {{ attributes.addClass(classes) }}>
+  {% set renderedBandContent %}
+    {% block band_background %}
+      {% if background %}
+        {% include "@bolt/background.twig" with background only %}
+      {% endif %}
+    {% endblock band_background %}
+    <{{ contentTag }} class="{{ "#{baseClass}__content" }}">
+      {% block band_content %}
+        {{ content }}
+      {% endblock band_content %}
+    </{{ contentTag }}>
+  {% endset %}
 
-    {% include "@bolt/wrapper.twig" with {
-      full: false,
-      content: renderedBandContent
-    } only %}
-  </{{ tag }}>
+  {% include "@bolt/wrapper.twig" with {
+    full: false,
+    content: renderedBandContent
+  } only %}
 </bolt-{{ componentName }}>
