--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -63,7 +63,7 @@
 
 <bolt-button
   size="{{ size in sizes ? size : 'medium' }}"
-  style="{{ style in styles ? style : 'primary' }}"
+  color="{{ style in styles ? style : 'primary' }}"
   {% if rounded %}rounded="true"{% endif %}
   {% if iconOnly %}icon-only="true"{% endif %}
   {{ attributes }}
