--- a/packages/components/bolt-background/src/background.scss
+++ b/packages/components/bolt-background/src/background.scss
@@ -2,8 +2,7 @@
    Background
 \* ------------------------------------ */
 
-@import '@bolt/tools-color-palette';
-@import '@bolt/tools-spacing';
+@import '@bolt/core';
 
 $bolt-test-color-background-gradient--primary: bolt-color(black); // This needs to map to the theme's background color.
 $bolt-test-color-background-gradient--secondary: rgba($bolt-test-color-background-gradient--primary, 0.1);
