--- a/src/_patterns/02-components/components-all/components-all.scss
+++ b/src/_patterns/02-components/components-all/components-all.scss
@@ -6,7 +6,7 @@
 @import '@bolt/components-band';
 @import '@bolt/components-button';
 @import '@bolt/components-button-group';
-@import '@bolt/components-brightcove-player';
+// @import '@bolt/components-brightcove-player';
 @import '@bolt/components-blockquote';
 @import '@bolt/components-card';
 @import '@bolt/components-chip';
@@ -14,7 +14,7 @@
 @import '@bolt/components-background-shapes';
 @import '@bolt/components-color-swatch';
 @import '@bolt/components-device-viewer';
-@import '@bolt/components-video';
+// @import '@bolt/components-video';
 @import '@bolt/components-figure';
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
