--- a/src/_patterns/02-components/bolt-video/demo/video--inline-script-with-external-controls.twig
+++ b/src/_patterns/02-components/bolt-video/demo/video--inline-script-with-external-controls.twig
@@ -24,7 +24,7 @@
       "playerId": "r1CAdLzTW",
       "videoUuid": "pega-video-5205361615001",
       "attributes": {
-        "on-init": "pegaCustomInitVideo",
+        "on-init": "initBrightcovePlugins",
         "data-email-subject": "Pega - CRM Evolved Atlanta: Customer Engagement in a Digital World",
         "data-email-body": "Check out this video from Pega",
         "data-email-videourl": "https://demo1.d8.pega.com/insights/resources/crm-evolved-atlanta-customer-engagement-digital-world"
