--- a/src/_patterns/02-components/bolt-video/demo/video--inline-script.twig
+++ b/src/_patterns/02-components/bolt-video/demo/video--inline-script.twig
@@ -7,7 +7,7 @@
   "accountId": "1900410236",
   "playerId": "r1CAdLzTW",
   "attributes": {
-    "on-init": "pegaCustomInitVideo",
+    "on-init": "initBrightcovePlugins",
     "data-email-subject": "Pega - Intelligent Virtual Assistant for Email",
     "data-email-body": "Check out this video from Pega",
     "data-email-videourl": "https://local.d8.pega.com/insights/resources/intelligent-virtual-assistant-email"
