--- a/src/_patterns/02-components/components-all/components-all.scss
+++ b/src/_patterns/02-components/components-all/components-all.scss
@@ -28,6 +28,7 @@
 @import '@bolt/components-sticky';
 @import '@bolt/components-nav-bar';
 @import '@bolt/components-teaser'; // tiny amount of styling
+@import '@bolt/components-search'; // private
 // @import '@bolt/components-chip-list'; // No styles
 // @import '@bolt/components-critical-path'; // No styles
 // @import '@bolt/components-font-loader'; // No styles
