--- a/packages/components/bolt-blockquote/src/blockquote.scss
+++ b/packages/components/bolt-blockquote/src/blockquote.scss
@@ -1,11 +1,3 @@
-@import '@bolt/settings-global';
-@import '@bolt/settings-colors';
-@import '@bolt/tools-spacing';
-@import '@bolt/tools-color-palette';
-
-
-
-
 /* ------------------------------------ *\
    Blockquote
 \* ------------------------------------ */
@@ -49,6 +41,7 @@
 //   </blockquote>
 // </bolt-blockquote>
 
+@import '@bolt/core';
 
 // Local Variables
 $bolt-blockquote-border-width: 4px;
