#309 Update component for new build tools: button-group

--- a/packages/components/bolt-button-group/src/button-group.scss
+++ b/packages/components/bolt-button-group/src/button-group.scss
@@ -1,4 +1,4 @@
-@import '@bolt/tools-spacing';
+@import '@bolt/core';
 
 bolt-button-group:not(:last-child) {
   @include bolt-margin-bottom(medium);
