#309 Update component for new build tools: ordered-list

--- a/packages/components/bolt-ordered-list/src/ordered-list.scss
+++ b/packages/components/bolt-ordered-list/src/ordered-list.scss
@@ -1,15 +1,3 @@
-/*@import '@bolt/settings-global'; // [1] TODO: Comment out for now. Need to include only once.*/
-@import '@bolt/settings-colors';
-@import '@bolt/settings-font-size';
-@import '@bolt/settings-font-weight';
-@import '@bolt/tools-font-size';
-@import '@bolt/tools-font-weight';
-@import '@bolt/tools-spacing';
-@import '@bolt/tools-color-palette';
-
-
-
-
 /* ------------------------------------ *\
    Ordered List
 \* ------------------------------------ */
@@ -29,6 +17,7 @@
 //   </ol>
 // </bolt-ordered-list>
 
+@import '@bolt/core';
 
 // Local Variables
 $bolt-ordered-list-bullet-size: $bolt-line-height--xsmall + rem;
