#309 Update component for new build tools: unordered-list

--- a/packages/components/bolt-unordered-list/src/unordered-list.scss
+++ b/packages/components/bolt-unordered-list/src/unordered-list.scss
@@ -1,11 +1,3 @@
-/*@import '@bolt/settings-global'; // [1] TODO: Comment out for now. Need to include only once.*/
-@import '@bolt/settings-colors';
-@import '@bolt/tools-spacing';
-@import '@bolt/tools-color-palette';
-
-
-
-
 /* ------------------------------------ *\
    unordered List
 \* ------------------------------------ */
@@ -25,6 +17,7 @@
 //   </ol>
 // </bolt-unordered-list>
 
+@import '@bolt/core';
 
 // Local Variables
 $bolt-unordered-list-bullet-size: 8px; // Using px here because I need to make a perfect circle without subpixel issues.
