#309 Update component for new build tools: teaser

--- a/packages/components/bolt-teaser/src/teaser.scss
+++ b/packages/components/bolt-teaser/src/teaser.scss
@@ -2,6 +2,8 @@
    TEASER COMPONENT
 \* ------------------------------------ */
 
+@import '@bolt/core';
+
 bolt-teaser:not(:last-child){
   @include bolt-margin-bottom(medium);
 }
