#309 Update component for new build tools: page-header and page-footer

--- a/packages/components/bolt-page-footer/src/_page-footer.scss
+++ b/packages/components/bolt-page-footer/src/_page-footer.scss
@@ -2,6 +2,8 @@
   #PAGE FOOTER
 \* ------------------------------------ */
 
+@import '@bolt/core';
+
 // Provides over-arching page footer
 
 .c-bolt-page-footer {
