feat: video player UAT updates

--- a/src/_patterns/02-components/bolt-background/src/background.scss
+++ b/src/_patterns/02-components/bolt-background/src/background.scss
@@ -75,7 +75,7 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
 
 .c-bolt-background__video {
   z-index: 10;
-  transition: all 0.4s ease;
+  transition: opacity 0.4s ease, min-height 0.4s ease, max-height 0.4s ease;
   top: 0;
   right: 0;
   bottom: 0;
