--- a/src/_patterns/02-components/bolt-button/src/button.scss
+++ b/src/_patterns/02-components/bolt-button/src/button.scss
@@ -484,6 +484,7 @@ bolt-button {
   font-size: inherit;
   font-family: inherit;
   cursor: inherit;
+  color: inherit; // fix for black text browser default
   outline: 0;
   padding: 0;
   display: inline-flex; // vertical alignment w/ icon only button
