--- a/src/_patterns/02-components/bolt-video/src/_videojs-enhancements.scss
+++ b/src/_patterns/02-components/bolt-video/src/_videojs-enhancements.scss
@@ -9,6 +9,10 @@
   -webkit-overflow-scrolling: touch;
 }
 
+.video-js .vjs-poster {
+  background-color: transparent;
+}
+
 .video-js .vjs-big-play-button.vjs-big-play-button {
   @include bolt-button-secondary;
   margin-top: auto;
