--- a/src/_patterns/02-components/brightcove-player/src/brightcove-meta.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-meta.scss
@@ -3,6 +3,13 @@ $bolt-export-data: false !global;
 @import '@bolt/settings-all';
 @import '@bolt/tools-all';
 
+// Same as max-width of wrapper container
+$bolt-video-meta--max-width: bolt-breakpoint(xxlarge);
+
+.c-brightcove-meta {
+  max-width: $bolt-video-meta--max-width;
+}
+
 .c-brightcove-meta__wrapper {
   @include bolt-padding(medium, squished);
   @include bolt-font-size(xsmall);
