--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
@@ -6,10 +6,14 @@ brightcove-player {
   // --aspect-ratio-height: 16;
   // --aspect-ratio-width: 9;
   // padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
-  
+
   &.is-playing {
     opacity: 1;
   }
+}
+
+.c-brightcove-video__inner {
+  margin: 0 auto;
 }
 
 bolt-video {
@@ -26,12 +30,28 @@ bolt-video {
 }
 
 
+
+
+.c-brightcove-video {
+  .c-bolt-background__video & {
+    position: relative;
+    display: block;
+    width: 100vw;
+    max-width: 100vh;
+    height: calc(100vw * (9/16));
+    max-height: calc(100vh * (9/16));
+    margin: 0 auto;
+  }
+}
+
 .video-js {
   // @supports (--custom:property) {
   //   padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
   // }
-  min-height: 100%;
-  min-width: 100%;
+
+  .c-bolt-background__video & {
+    height: 100%;
+  }
 }
 
 // .c-bolt-background-video {
