--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
@@ -33,6 +33,12 @@ bolt-video {
 
 
 .c-brightcove-video {
+
+  .video-js {
+    width: 100%;
+    height: 100%;
+  }
+
   .c-bolt-background__video & {
     position: relative;
     display: block;
@@ -45,6 +51,8 @@ bolt-video {
 }
 
 .video-js {
+  width: 100%;
+  height: 100%;
   // @supports (--custom:property) {
   //   padding-top: calc( var(--aspect-ratio-height, 1) / var(--aspect-ratio-width, 1) * 100%);
   // }
