styles: press and media search

--- a/src/_patterns/04-pages/d8-press/d8-press-browse.twig
+++ b/src/_patterns/04-pages/d8-press/d8-press-browse.twig
@@ -111,7 +111,7 @@
                 <div class="c-bolt-input-list__item">
                   <input class="c-bolt-input c-bolt-input--checkbox" type="checkbox" name="date" id="date-choice-5" value="2013" />
                   <label class="c-bolt-inline-label c-bolt-inline-label--checkbox" for="date-choice-5">
-                    2013 (10)
+                    <span class="c-bolt-inline-label__emphasize">2013 (10)</span>
                   </label>
                 </div>
               </div>
@@ -270,7 +270,7 @@
         {% endcell %}
         {% cell 'u-bolt-width-1/1 u-bolt-width-9/12@medium' %}
           {% grid "o-bolt-grid--flex o-bolt-grid--middle" %}
-            {% cell "u-bolt-width-1/1 u-bolt-width-8/12@medium" %}
+            {% cell "u-bolt-width-1/1 u-bolt-width-9/12@medium" %}
               <ul class="o-bolt-inline-list o-bolt-inline-list--small">
                 <li class="o-bolt-inline-list__item">
                   <strong>1</strong>
@@ -298,7 +298,7 @@
                 </li>
               </ul>
             {% endcell %}
-            {% cell "u-bolt-width-1/1 u-bolt-width-4/12@medium" %}
+            {% cell "u-bolt-width-1/1 u-bolt-width-3/12@medium" %}
               <form action="#" method="post" class="c-bolt-form">
                 <fieldset class="c-bolt-fieldset">
                   <div class="c-bolt-input-list">
@@ -540,6 +540,32 @@
               } only %}
             </div>
           </div>
+          <ul class="o-bolt-inline-list o-bolt-inline-list--small">
+            <li class="o-bolt-inline-list__item">
+              <strong>1</strong>
+            </li>
+            <li class="o-bolt-inline-list__item">
+              <a href="javascript:" class="c-bolt-link">2</a>
+            </li>
+            <li class="o-bolt-inline-list__item">
+              <a href="javascript:" class="c-bolt-link">3</a>
+            </li>
+            <li class="o-bolt-inline-list__item">
+              <a href="javascript:" class="c-bolt-link">4</a>
+            </li>
+            <li class="o-bolt-inline-list__item">
+              <a href="javascript:" class="c-bolt-link">5</a>
+            </li>
+            <li class="o-bolt-inline-list__item">
+              &hellip;
+            </li>
+            <li class="o-bolt-inline-list__item">
+              <a href="javascript:" class="c-bolt-link">20</a>
+            </li>
+            <li class="o-bolt-inline-list__item">
+              <a href="javascript:" class="c-bolt-link">&raquo;</a>
+            </li>
+          </ul>
         {% endcell %}
       {% endgrid %}
     </div>
