--- a/src/_patterns/04-pages/d8-press/d8-press-landing.twig
+++ b/src/_patterns/04-pages/d8-press/d8-press-landing.twig
@@ -39,11 +39,11 @@
           "headlines": [
             {
               "type": "headline",
-              "text": "A New CRM Bill of Rights for the Future Empowered Enterprise",
+              "text": "Pegasystems to Present at the Needham Growth Conference",
               "size": "large"
             }
           ],
-          "content": "Jeff Nicholson of Pega provides insight into what companies should expect from CRM vendors.",
+          "content": "CAMBRIDGE, Mass. – January 11, 2018 – Pegasystems Inc. (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises, today announced that its chief financial officer, chief...",
           "buttons": [
             {
               "text": "Read more",
@@ -65,11 +65,11 @@
           "headlines": [
             {
               "type": "headline",
-              "text": "6 Customer Experience Trends to Watch in 2018",
+              "text": "Pega Receives Highest Scores in Two Use Cases in Gartner’s Critical Capabilities for the CRM Customer Engagement Center",
               "size": "large"
             }
           ],
-          "content": "Pega's Don Schuerman previews customer experience questions and trends for the New Year.",
+          "content": "CAMBRIDGE, Mass. – December 26, 2017 – Pegasystems Inc. (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises, today announced it received the highest scores in the business-...",
           "buttons": [
             {
               "text": "Read more",
@@ -91,11 +91,11 @@
           "headlines": [
             {
               "type": "headline",
-              "text": "3 Reasons Your AI-Driven Customer Experiences are Falling Short",
+              "text": "Pegasystems Announces Quarterly Cash Dividend",
               "size": "large"
             }
           ],
-          "content": "Pega's Jeff Nicholson examines the state of AI in today's customer experiences.",
+          "content": "CAMBRIDGE, Mass. – December 15, 2017 – Pegasystems Inc. (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises, today announced a quarterly cash dividend of $0.03 per share,...",
           "buttons": [
             {
               "text": "Read more",
