--- a/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
+++ b/src/_patterns/02-components/brightcove-player/src/brightcove-player.scss
@@ -42,9 +42,9 @@ bolt-video {
   .c-bolt-background__video & {
     position: relative;
     display: block;
-    width: 100vw;
+    width: calc(100vw - #{bolt-spacing(large)});
     max-width: 100vh;
-    height: calc(100vw * (9/16));
+    height: calc(calc(100vw - #{bolt-spacing(large)}) * (9/16));
     max-height: calc(100vh * (9/16));
     margin: 0 auto;
   }
