--- a/src/_patterns/02-components/bolt-video/src/_video.scss
+++ b/src/_patterns/02-components/bolt-video/src/_video.scss
@@ -3,6 +3,8 @@
 
 @import 'videojs-enhancements';
 
+// Same as max-width of wrapper container
+$bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
 .c-bolt-video {
   position: absolute;
@@ -18,6 +20,17 @@
   position: relative;
   width: 100%;
   pointer-events: none;
+  max-width: $bolt-video-wrapper--max-width;
+  margin: 0 auto;
+  transition: opacity 0.4s ease, visibility 0.1s ease;
+  opacity: 0;
+  visibility: hidden;
+
+  .is-expanded & {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
 }
 
 .c-bolt-video__video-element {
@@ -47,7 +60,7 @@
   position: absolute;
   z-index: 1000;
   top: bolt-spacing(xsmall);
-  right: bolt-spacing(xsmall);
+  right: (bolt-spacing(large) / -2) - bolt-spacing(xsmall);
   transition: all 0.3s ease;
   opacity: 0; // Initial state before brightcove video player kicks in
 
