--- a/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/01-brand-colors.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/01-brand-colors.twig
@@ -1,3 +1,5 @@
+{% set bolt_brand_colors = get_data('@bolt-assets/bolt-brand-colors.data.json').boltBrandColors %}
+
 <div class="o-bolt-grid o-bolt-grid--flex o-bolt-grid--matrix o-bolt-grid--small">
   {% for colorName, palette in bolt_brand_colors %}
     {% include "@bolt/_color-swatch.twig" with {
