--- a/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/02-status-colors.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/01-visual-styles/color-palette/02-status-colors.twig
@@ -1,3 +1,5 @@
+{% set bolt_status_colors = get_data('@bolt-assets/bolt-status-colors.data.json').boltStatusColors %}
+
 <div class="o-bolt-grid o-bolt-grid--flex o-bolt-grid--matrix o-bolt-grid--small">
   {% for colorName, palette in bolt_status_colors %}
     {% include "_color-swatch.twig" with {
