--- a/packages/components/color-swatch/_color-swatch.scss
+++ b/packages/components/color-swatch/_color-swatch.scss
@@ -1,8 +1,13 @@
+$bolt-export-data: false !global;
+
+@import '@bolt/core';
+
 .c-bolt-swatch {
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 100%; // So vertical centering works -- same update we had to make for cards since teaking how flex grid behaves
 }
 
 .c-bolt-swatch__color {
