--- a/apps/pattern-lab--workshop/src/_meta/_01-foot.twig
+++ b/apps/pattern-lab--workshop/src/_meta/_01-foot.twig
@@ -2,6 +2,10 @@
   <!--DO NOT REMOVE-->
   {{ patternLabFoot | raw }}
 
-    <script src="../../assets/bolt.js?{{ cacheBuster }}" async></script>
+    {# @TODO: how do we get this to use the exact same values from our global .js config without having the source of truth live as a .yml or .json file...? #}
+    {% set assets = get_data("@bolt-assets/bolt-manifest.json") %}
+
+    <script src="{{ assets["bolt-global.js"] }}" async></script>
+
   </body>
 </html>
