--- a/src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-input-element.twig
+++ b/src/_patterns/02-components/bolt-forms/demo/form-elements/form-element-demo-input-element.twig
@@ -1,15 +1,16 @@
 {% extends "@bolt/form-element.twig" %}
 
+{% set label_display = 'after' %}
+
 {% set label %}
   {% include("@bolt/form-label.twig") with {
-    "title": "Title"
+    "title": title,
+    "displayType": labelDisplayType
   } %}
 {% endset %}
 
 {% set children %}
   {% include("@bolt/form-input.twig") with {
-    "attributes": {
-      "placeholder": "Enter a Title"
-    }
+    "attributes": inputAttributes
   } %}
 {% endset %}
