refactor: Update component for new build tools: nav-bar (#309)

--- a/packages/components/bolt-nav-bar/src/nav-bar.scss
+++ b/packages/components/bolt-nav-bar/src/nav-bar.scss
@@ -1,5 +1,4 @@
-@import '@bolt/settings-all';
-@import '@bolt/tools-all';
+@import '@bolt/core';
 
 /* ------------------------------------ *\
    Nav-bar
