--- a/packages/components/bolt-card/src/card.scss
+++ b/packages/components/bolt-card/src/card.scss
@@ -4,8 +4,7 @@
 
 $bolt-export-data: false;
 
-@import '@bolt/settings-all';
-@import '@bolt/tools-all';
+@import '@bolt/core';
 
 
 $bolt-global-shadow-depth-xsmall: 0  1px  3px rgba(bolt-color(black), 0.12), 0 1px  2px  rgba(bolt-color(black), 0.24); // Buttons - default
